# python-analytics

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
src/: cli.py
src/analytcs/: DataFrame.py  cli.py  collection.py
src/commands/: find_data.py  get_data.py  group_by_data.py  order_by_data.py
src/console/: app_console.py
src/domains/: collection.py
storage/: people.csv
tests/unit/: test_analytics.py
tests/units/: test_analytics.py
