[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-analytics"
authors = [
    {name = "Mario Brino", email = "mariobrino@gmail.com"}
]
description = "Simple Example of Wrapping Python Pandas"
version = "0.0.1"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "coverage==7.6.12",
    "exceptiongroup==1.2.2",
    "iniconfig==2.0.0",
    "numpy==2.2.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pluggy==1.5.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "ruff==0.9.10",
    "six==1.17.0",
    "tomli==2.2.1",
    "tzdata==2025.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
analyze = "analytcs.cli:main"
